feat: 누락된 좋아요 기능 추가